[package]
name = "tof10120"
version = "0.1.0"
authors = ["Henk Dieter Oordt <henkdieter@oordt.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A driver for the TOF10120 Time-of-Flight sensor"
keywords = ["embedded", "tof", "tof10120", "time-of-flight"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/tof10120-rs"
exclude = ["/examples", "/.cargo", "/target", "/openocd.cfg", "/openocd.gdb", "/memory.x", "Cargo.lock", "/.gitignore", "/.cargo_vcs_info.json"]

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m = "0.6.0"
nb = "0.1.2"

[dev-dependencies]
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

[dev-dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt", "medium"]

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
